# stats-keeper

./: .gitignore
backend/: pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 7ccd90925c99_initial_database_schema.py
backend/app/core/: config.py
backend/app/models/: game.py  league.py  league_team.py  player.py  stats.py  team.py
backend/backend/: settings.py
backend/stats_app/: models.py
backend/stats_app/migrations/: 0001_initial.py
database/schemas/: games.sql  league_teams.sql  leagues.sql  players.sql  stats.sql  teams.sql
