[project]
name = "stats-keeper"
version = "0.1.0"
description = "Basketball Statistics Tracking Application"
requires-python = ">=3.12"
authors = [
    {name = "Kevin Huang"}
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["app"]

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"